# MPAPFR

./: .gitignore  README.md  pyproject.toml
configs/: template.in.toml
configs/data/: cifar10-cnn.toml
scripts/: deploy.py  execute.sh  leak.py
src/: datasets.py  main.py  models.py  robusts.py
src/attackers/: __init__.py  core.py  mpapfr.py  utils.py
src/flcore/: __init__.py  client.py  robust.py  server.py  system.py
src/flcore/utils/: __init__.py  atomic_io.py  data.py  misc.py  model.py
src/system/: ditto.py  fedavg.py  fedavgft.py  helper.py  optimizers.py
